[project]
name = "klass"
version = "0.1.0"
description = ""
authors = [
    {name = "Vrinda Goel"},
    {name = "Marty"}
]
license = {text = "GPL V3"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-role-permissions (>=3.2.0,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "whitenoise[brotli] (>=6.9.0,<7.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.2"}
mypy = "^1.17.1"

